--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
   <title>JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="https://fav.farm/🔥" />
+  <style>
+    #keyboardInput {
+      position: absolute;
+      left: -9999px;
+      opacity: 0;
+      height: 0;
+      width: 0;
+    }
+  </style>
 </head>
 <body>
 
+  <input id="keyboardInput" type="text" autofocus autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
 
   <div class="keys">
     <div data-key="65" class="key">
@@ -59,14 +69,17 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  const input = document.getElementById('keyboardInput');
+
   function removeTransition(e) {
     if (e.propertyName !== 'transform') return;
     e.target.classList.remove('playing');
   }
 
   function playSound(e) {
-    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-    const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
+    const keyCode = e.keyCode || e.which;
+    const audio = document.querySelector(`audio[data-key="${keyCode}"]`);
+    const key = document.querySelector(`div[data-key="${keyCode}"]`);
     if (!audio) return;
 
     key.classList.add('playing');
@@ -76,9 +89,10 @@
 
   const keys = Array.from(document.querySelectorAll('.key'));
   keys.forEach(key => key.addEventListener('transitionend', removeTransition));
-  window.addEventListener('keydown', playSound);
+  input.addEventListener('keydown', playSound);
+  input.focus();
+  input.addEventListener('blur', () => input.focus());
 </script>
-
 
 </body>
 </html>
