--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>JS Drum Kit</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="https://fav.farm/🔥" />
   <style>
+    /* إخفاء حقل الإدخال */
     #keyboardInput {
       position: absolute;
       left: -9999px;
@@ -17,6 +18,7 @@
 </head>
 <body>
 
+  <!-- حقل الإدخال المخفي لفتح كيبورد الموبايل -->
   <input id="keyboardInput" type="text" autofocus autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
 
   <div class="keys">
@@ -71,6 +73,14 @@
 <script>
   const input = document.getElementById('keyboardInput');
 
+  // تفعيل الأصوات عند أول تفاعل لمتصفحات الموبايل
+  window.addEventListener('touchstart', () => {
+    const audioElements = document.querySelectorAll('audio');
+    audioElements.forEach(audio => {
+      audio.play().then(() => audio.pause());
+    });
+  }, { once: true });
+
   function removeTransition(e) {
     if (e.propertyName !== 'transform') return;
     e.target.classList.remove('playing');
@@ -89,7 +99,11 @@
 
   const keys = Array.from(document.querySelectorAll('.key'));
   keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+
+  // استماع للكيبورد فقط على حقل الإدخال (مهم للموبايل)
   input.addEventListener('keydown', playSound);
+
+  // اجعل الحقل دائماً مركزًا حتى لا يختفي الكيبورد
   input.focus();
   input.addEventListener('blur', () => input.focus());
 </script>
